k8s/Polybot/prod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polybot
  namespace: prod
  labels:
    app: polybot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: polybot
  template:
    metadata:
      labels:
        app: polybot
    spec:
      containers:
        - name: polybot
          image: deemaa/polybot-prod:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: polybot-service
  namespace: prod
spec:
  selector:
    app: polybot
  ports:
    - port: 8000
      targetPort: 8000
