k8s/Polybot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polybot-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - deema.polybot.fursa.click
      secretName: fursa-click-tls
  rules:
    - host: deema.polybot.fursa.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: polybot-service
                port:
                  number: 8000
